<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/edt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/tv_printed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Hasil Cetak Teks"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:id="@+id/btn_change_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ubah Text"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btn_swicth_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pindah Activity"/>
</LinearLayout>
